--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <main>
     <aside class="contenedor_1">
       <img
-        src="/images/bethanylogo.png"
+        src="images/bethanylogo.png"
         alt="Descripción de la imagen"
         width="300"
         height="200"
@@ -98,7 +98,7 @@
       <h1>Welcome to Bethany's Store</h1>
 
       <img
-        src="/images/bethany.jpg"
+        src="images/bethany.jpg"
         alt="description"
         height="400"
         width="650"
@@ -124,7 +124,7 @@
       <h3>Chesse cake</h3>
       <p>$12.95 - serves 4</p>
       <img
-        src="/images/cheesecake.jpg"
+        src="images/cheesecake.jpg"
         alt="description"
         height="300"
         width="450"
